# AndroidNodeSystem

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opengl.cpp
app/src/main/res/drawable/: animation_full_screen.xml  back.xml  back_node.xml  circle.xml  delete.xml  generator_editor_setting_background.xml  ic_baseline_circle_24.xml  ic_finger.xml  item.xml  nav.xml  node.xml  node_shadow.xml  options.xml  play.xml  plus.xml  plus_white.xml  save.xml  settings.xml  settings_background.xml  settings_button.xml  settings_selected.xml
app/src/main/res/layout/: activity_database_renderer.xml  activity_generator.xml  activity_generator_editor.xml  activity_group_list.xml  activity_main.xml  activity_new_algorithm_popup.xml  activity_node.xml  activity_splash.xml  activity_trick_info_popup.xml  activity_trick_list.xml  add_group.xml  add_node.xml  add_node_item.xml  array.xml  array_list_item.xml  button_item.xml  delete_popup.xml  dialog_yes_no.xml  floating_settings.xml  grid_item.xml  item_shop_card.xml  sample_node.xml  sample_node_nav.xml  trick_info_group_add.xml  trick_info_groups_item.xml  trick_item.xml  view_node_edit_text.xml  view_node_input.xml  view_node_list.xml  view_node_number.xml  view_node_output.xml  view_nodenav.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs_node.xml  colors.xml  dimens.xml  node_values.xml  strings.xml  (+2 more)
app/src/main/res/values-night/: styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+168 files in other folders)
